# EinsteinDB

./:  LICENSE(0).LICENSE   README(0).md   r2d2(0).sh  .._config.yml.icloud  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  Users:tyco:Downloads:mentat.textClipping  build.gradle  conn.rs  docker-compose.debug.yml  docker-compose.yml  go.mod  init.sh  init.sh.save  lib.rs  main.go  query_builder.rs  vocabulary.rs  welcome2einsteindb.sh
 einsteindb_core(0).einsteindb_core/: Cargo.toml
 einsteindb_core(0).einsteindb_core/src/: cache.rs  sql_types.rs  util.rs
allegro_poset/: Cargo.toml  alexandrov_process.rs  allegro_causet_value.rs  causet_locale.rs  convert.rs  datum.rs  datum_codec.rs  lib.rs  lightlike_upsert.rs  mod.rs  spacetime.rs  sync.rs
allegro_poset/src/: alexandrov_process.rs  allegro_causet_value.rs  causet_locale.rs  convert.rs  datum.rs  datum_codec.rs  lib.rs  lightlike_upsert.rs  mod.rs  spacetime.rs  sync.rs  types.rs
allegroeinstein-prolog-causet-projector/MilevaDB_query_vec_expr/: Cargo.toml
berolinasql/: Cargo.toml  binary_literal.rs  constants.rs  decimal.rs  duration.rs  error.rs  jcodec.rs  json_depth.rs  json_extract.rs  json_keys.rs  json_length.rs  json_merge.rs  json_modify.rs  json_unquote.rs  mod.rs  modifier.rs  overflow.rs  path_expr.rs  serde.rs  table.rs
berolinasql/engine_test/: Cargo.toml
berolinasql/src/: README.md  binary.rs  binary_literal.rs  charset.rs  comparison.rs  constants.rs  decimal.rs  duration.rs  error.rs  jcodec.rs  json_extract.rs  json_keys.rs  json_length.rs  json_merge.rs  json_modify.rs  json_type.rs  json_unquote.rs  main.rs  mod.rs  modifier.rs  overflow.rs  path_expr.rs  serde.rs  table.rs
berolinasql/tests/: value_tests.rs
causet/: Cargo.toml  causet_partitioner.rs  causetxctx_control_factors.rs  einstein_merkle_tree.rs  einstein_merkle_trees.rs  einsteindb_vector.rs  lib.rs
causet-algebrizer/causet_compiler/: Cargo.toml  allegrosql.rs
causet-projector/: Cargo.toml  pull.rs
causet-projector/src/: causet_tuple.rs  lib.rs  project.rs
causet/src/: causet.rs  causet_of_causets.rs  causetxctx_control_factors.rs  cuaset.rs  eval_type.rs  field_type.rs  io_limiter.rs  lib.rs  main.rs  mod.rs  mutant_search.rs  mutant_searcher.rs  range.rs  ranges_iter.rs  test_fixture.rs
causetq/: Cargo.toml
causetq/builder/: field_type.rs
causetq/expr/: ctx.rs  mod.rs
causetq/src/: ctx.rs  debug.rs  dedup.rs  field_type.rs  internal_types.rs  lib.rs  mod.rs  scalar.rs  tx_observer.rs  upsert_resolution.rs  vector.rs
causets/: Cargo.toml  causet_partitioner.rs  error.rs  mod.rs  mutant_search.rs  mutant_searches.rs  not_chunked_vec.rs  query_builder.rs  quiesce_column.rs  quiesce_column_vec.rs
causets/src/: error.rs  main.rs  mod.rs  mutant_search.rs  mutant_searches.rs  not_chunked_vec.rs  query_builder.rs  quiesce_column.rs  quiesce_column_vec.rs
edn/: Cargo.toml  README.md  build.rs
edn/src/: causal_set 2.rs  causal_set.rs  causets.rs  einsteinml.rustpeg  lib 2.rs  lib.rs  matcher.rs  namespaceable_name.rs  pretty_print.rs  query.rs  symbols 2.rs  symbols.rs  types.rs  utils.rs  value_rc.rs
edn/tests/: query_tests.rs  serde_support.rs  tests 2.rs  tests.rs
einstein_db/: Cargo.toml  lib.rs  new_file
einstein_db/codec/: convert.rs  datum.rs  datum_codec.rs  error.rs  mod.rs  table.rs
einstein_db/einstein_db_alexandrov_processing/: Cargo.toml  sentinel.rs
einstein_db/einstein_db_ctl/: Cargo.toml
einstein_db/einsteindb-server/: Cargo.toml
einstein_db/fdb_traits/: Cargo.toml
einstein_db/src/: causetids.rs  config.rs  conn.rs  einstein_merkle_trees.rs  einsteindb.rs  einsteindb_vector.rs  error.rs  execute_stats.rs  lib.rs  main.rs  mod.rs
einstein_db_alexandrov_processing/: Cargo.toml  alexandrov.rs  file_system.rs  greedoids.rs  iterable.rs  lib.rs  mod.rs  mutable.rs  namespaced_defs.rs
einstein_db_alexandrov_processing/src/: alexandrov.rs  block_properties.rs  greedoids.rs  iterable.rs  lib.rs  mod.rs  namespaced_defs.rs  perf_context.rs
einstein_db_ctl/: Cargo.toml
einstein_db_ctl/src/: Violetabft.rs  einstein_merkle_tree.rs  einstein_ssh.rs  lightlike_persistence.rs  main.rs  mvrsi_properties.rs  perf_context.rs  range_properties.rs  violetabft.rs
einstein_ml/: Cargo.toml  ast.rs  constant.rs  einstein_ml_stdout.rs  isolated_namespace.rs  lib.rs  matcher.rs  mod.rs  query.rs  two_pronged_crown.rs  utils.rs  value_rc.rs
einstein_ml/src/: ast.rs  causal_set.rs  causets.rs  constant.rs  einstein_ml_stdout.rs  einsteinml.rustpeg  isolated_namespace.rs  lib.rs  matcher.rs  mod.rs  namespaceable_name.rs  pretty_print.rs  query.rs  shellings.rs  symbols.rs  two_pronged_crown.rs  types.rs  utils.rs  value_rc.rs
einsteindb/: Cargo.toml  raw.rs
einsteindb-gen/embedded_promises/: Cargo 2.toml  Cargo.toml  lib.rs  value_type_set.rs  values.rs
einsteindb-server/: Cargo.toml  db_vector.rs  metrics.rs  namespaced_options.rs  primitive_ttl.rs  shellings.rs  ttl_properties.rs  utils.rs
einsteindb-server/src/: db_vector.rs  macros.rs  main.rs  metrics.rs  namespaced_options.rs  shellings.rs  ttl_properties.rs
einsteindb-sys/edbn/: Cargo.toml
einsteindb/engine_panic/: Cargo.toml
einsteindb/engine_test/: Cargo.toml
einsteindb/src/: Cargo.toml  add_retract_alter_set.rs  aries.rs  bootstrap.rs  brane_handle.rs  brane_names.rs  brane_options.rs  cache.rs  causetids.rs  causetx.rs  config.rs  conn.rs  db.rs  debug.rs  einstein_merkle.rs  einsteindb.rs  engine.rs  (+23 more)
einsteindb_util/: Cargo.toml
engine_test/: Cargo.toml  fsm.rs  import.rs
fdb_traits/: Cargo.toml  einsteindb_options.rs  encryption.rs  errors.rs  fdb.rs  options.rs  peekable.rs  violetabft_engine.rs  vocabulary.rs  write_batch.rs
soliton/: Cargo.toml  cache.rs  cc_checking.rs  config.rs  conn.rs  constant.rs  debug.rs  discrete_morse.rs  einsteindb.rs  internal_types.rs  lib.rs  query_builder.rs  read_pool.rs  schema.rs  spacetime.rs  timelines.rs  two_pronged_crown.rs  tx.rs  tx_checking.rs  upsert_resolution.rs  watcher.rs
soliton_panic/: Cargo.toml
(+1245 files in other folders)
