[package]
name = "einsteindb"
version = "1.0.0"
authors = ["Whtcorps", "EinstAI", "Josh Leder slushie@gmail.com", "Karl Whitford (karl@einst.ai)", "Jared Smith (jared@amazon.com)"]     
edition = "2021"
description = "EinsteinDB is a Distributed OLAP Semi-Relational Relativsitic Causal Consistent Database with Interlocking Directorate OLTP"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["OLAP", "OLTP", "MergeAppend", "Bulk Synchronization", "IPAM", "CRON", "SQLAgnostic", "Hybrid Key-Value"]
categories = ["HTAP", "CAUSETS", "ACID", "DB4AI", "command-line-utilities", "development-tools::cargo-plugins"]
publish = false



[dependencies]
einstein_db = { path = "./einstein_db"  }
einstein_ml = { path = "./einstein_ml" }
causetq = { path = "./causetq" }
causets = { path = "./causets" }
causet = {path = "./causet"}
berolinasql = {path = "./berolinasql"}
einstein_db_ctl = {path = "./einstein_db_ctl"}
einstein_db_alexandrov_processing = {path = "./einstein_db_alexandrov_processing"}
einsteindb-server = {path = "./einsteindb-server"}
soliton = {path = "./soliton"}
soliton_panic = {path = "./soliton_panic"}
chrono = "0.4.19"
failure = "0.1.0"
lazy_static = "1.4.0"
time = "0.3.11"
uuid = {version = "0.5", features= ["v1", "v3", "v4", "v5"]}
serde = {version = "0.9.0", features= ["derive", "json", "serde_derive"]}
serde_json = "0.13.0"