[package]
name ="einsteindb"
version = "1.0.0"
description = "EinsteinDB is the world's first relativsitc database. It is a relational database that is designed to be fast and scalable."
author = "EinsteinDB Team"
license = "MIT"

[lib]
path = "./src/lib.rs"

[dependencies]
log = "0.4"
ordered-float = "3.0.0"
petgraph = "0.6.0"
slog = "1.0.1138"
failure = "0.1.8"
lazy_static = "1.4.0"
time = "0.3.11"
serde = "1.0.138"
