[package]
name = "allegro_poset"
version = "0.1.0"
edition = "2021"
author = "AllegroCL EinsteinDB's team"
description = "AllegroCL Poset"
license = "MIT"
homepage = "https://www.einsteindb.com"


[lib]
name = "allegro_poset"


[lib.path]
include = "include"
lib = "lib"


[lib.link]
lib = "allegro_poset"


[lib.include]
include = "include"


[lib.lib]
lib = "allegro_poset"

[dependencies]

byteorder = "1.2"
tokio = "1.19.2"
enum-set = "0.0.8"
lazy_static = "1.4.0"
indexmap = "1.8.0"
serde = {version = "1.0.99", features=["derive"] }
uuid = "1.1.2"
libc = "0.2.54"
static_assertions = "1.0"














