[package]
name = "allegro_poset"
version = "0.1.0"
edition = "2021"
author = "AllegroCL EinsteinDB's team"
description = "AllegroCL Poset"
license = "MIT"
homepage = "https://www.einsteindb.com"
repository = "https://github.com/YosiSF/EinsteinDB"


[target]
arch = "x86_64"
os = "linux"
cpu = "x86_64"
features = ["sse2", "sse4.2", "sse4.1", "ssse3", "sse3", "sse2", "sse", "sse"]








[dependencies]
einstein_db = { path= "../einstein_db" }
eindtein_ml = { path= "../einstein_ml" }
berolinasql = { path= "../berolinasql" }
causet= { path= "../causet" }
causets = { path= "../causets" }
soliton = { path= "../soliton" }
soliton_panic = { path= "../soliton_panic" }
fdb_traits = { path= "../fdb_traits" }
serde = "1.0.1138"
serde_derive = "1.0.1138"
slog = "1.0.1138"
einstein_db_ctl = { path= "../einstein_db_ctl" }
einstein_db_alexandrov_processing = {path= "../einstein_db_alexandrov_processing"}
byteorder = "1.2"
tokio = "1.19.2"
enum-set = "0.0.8"
lazy_static = "1.4.0"
indexmap = "1.8.0"
uuid = "1.1.2"
libc = "0.2.54"
static_assertions = "1.0"













