[package]
name = "berolinasql"
version = "0.0.1"
authors = [["BerolinaSQL and EinsteinDB Authors, Whtcorps", "EinstAI"]]
edition = "2021"
description = "BerolinaSQL is a SQL engine that is based on the BerolinaDB database system."
license = "MIT/Apache-2.0"


[dependencies]
serde_derive = "1.0.1138"
slog = "1.0.1138"
grpc = "= 0.2.0"
protobuf = "= 3.12.3"
protoc-rust = "= 1.3.0"
future = "= 0.2.18"
crossbeam="= 0.7"
prost = "= 0.7.4"
prost-derive = "= 0.7.4"
serde = "= 1.0"
anyhow = "1.0"
async-stream = "0.2"
async-trait = "0.1"
backtrace = "0.3"
byteorder = "1.2"
chrono = "0.4"
crc32fast = "1.2"
crc64fast = "0.1"
fail = "0.5"
futures-executor = "0.3.1"
futures-timer = "3.0"
hex = "0.4"
hyper-tls = "0.5"
itertools = "0.10"
lazy_static = "1.3"
libc = "0.2"
libloading = "0.7"
mime = "0.3.13"
more-asserts = "0.2"
murmur3 = "0.5.1"
notify = "4"
num-traits = "0.2.14"
num_cpus = "1"
openssl = "0.10"
parking_lot = "0.12"
paste = "1.0"
pin-project = "1.0"
pnet_datalink = "0.23"
prometheus-static-metric = "0.5"
regex = "1.3"
rev_lines = "0.2.1"
seahash = "4.1.0"
semver = "0.11"


