[package]
name = "causet"
version = "0.1.0"
edition = "2021"


# See more soliton_ids and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
soliton = "0.0.0"
chrono = "0.4"
itertools = "0.10.3"
num = "0.4.0"
serde = "1.0"

uuid = "1.1.2"
serde_derive = { version = "1.0", optional = true }

[dev-dependencies]
serde_test = "1.0"
serde_json = "1.0"

[features]
serde_support = ["serde", "serde_derive"]









