[package]
name = "causet"
version = "0.1.0"
edition = "2021"
description = "A simple cause-effect system for AllegroCL"
license = "MIT"
url = "https://github.com/YosiSF/EinsteinDB/Causet"


[dependencies]
chrono = "0.4.19"
itertools = "0.10.3"
num = "0.4.0"
serde = "1.0.138"
serde_json = "1.0.82"
serde_yaml = "0.8.24"
serde_derive = "1.0.82"
serde_bytes = "1.0.82"
uuid = "1.1.2"


[dev-dependencies]
cargo-test = "0.2.0"
cargo-clippy = "0.12.0"