[package]
name = "causet"
version = "0.1.0"
edition = "2021"
description = "A simple cause-effect system for AllegroCL"
license = "MIT"
url = "https://github.com/YosiSF/EinsteinDB/Causet"


[dependencies]
chrono = "0.4.19"
itertools = "0.10.3"
num = "0.4.0"

uuid = "1.1.2"


[dev-dependencies]
cargo-test = "0.2.0"
cargo-clippy = "0.12.0"
rustfmt = "1.26.0"


[features]
default = ["causet"]
causet = []
serde_json = ["serde"]
serde_yaml = ["serde"]
serde_derive = ["serde"]
serde_bytes = ["serde"]
uuid = ["serde"]

[profile.release]
optimization = "speed"
lto = true
debug = false
doc = false
test = false
bench = false

[profile.debug]
optimization = "size"
lto = false
debug = true
doc = false
test = false
bench = false

[profile.doc]
optimization = "speed"
lto = false
debug = false
doc = true
test = false
bench = false

[profile.test]
optimization = "speed"
lto = false
debug = false
doc = false
test = true
bench = false

[profile.bench]
optimization = "speed"
lto = false
debug = false
doc = false
test = false
bench = true

[profile.dev]
optimization = "speed"
lto = false
debug = true
doc = false
test = true
bench = true

[profile.test-dev]
optimization = "speed"
lto = false
debug = true
doc = false
test = true
bench = true

[profile.bench-dev]
optimization = "speed"
lto = false
debug = true
doc = false
test = false
bench = true

[profile.doc-dev]
optimization = "speed"
lto = false
debug = true
doc = true
test = true
bench = true

[profile.test-bench]
optimization = "speed"
lto = false
debug = false
doc = false
test = true
bench = true

[profile.test-bench-dev]
optimization = "speed"
lto = false
debug = true
doc = true
test = true
bench = true

[profile.doc-bench]
optimization = "speed"
lto = false
debug = false
doc = true
test = false
bench = true


[profile.doc-bench-dev]
optimization = "speed"
lto = false
debug = true
doc = true
test = true
bench = true



[target.'cfg(test)'.dependencies]
chrono = "0.4.19"
itertools = "0.10.3"
num = "0.4.0"
serde = "1.0.138"
serde_json = "1.0.82"
serde_yaml = "0.8.24"
serde_derive = "1.0.82"
serde_bytes = "1.0.82"
uuid = "1.1.2"

[target.'cfg(test)'.dev-dependencies]
cargo-test = "0.2.0"
cargo-clippy = "0.12.0"

[target.'cfg(test)'.features]
serde_json = ["serde"]
serde_yaml = ["serde"]
serde_derive = ["serde"]
serde_bytes = ["serde"]
uuid = ["serde"]

[target.'cfg(test)'.dependencies]
chrono = "0.4.19"
itertools = "0.10.3"
num = "0.4.0"
serde = "1.0.138"
serde_json = "1.0.82"
serde_yaml = "0.8.24"
serde_derive = "1.0.82"
serde_bytes = "1.0.82"
uuid = "1.1.2"

[target.'cfg(test)'.dev-dependencies]
cargo-test = "0.2.0"
cargo-clippy = "0.12.0"

[target.'cfg(test)'.features]
serde_json = ["serde"]