[package]
name = "causets"
version = "0.1.0"
edition = "2021"
author = "EinsteinDB Authors - @CavHack"
description = "Causets is a tool for generating causality datasets for testing causality algorithms."
license = "MIT"
homepage = "https://www.einsteindb.com"
repository = "https://www.github.com/YosiSF/EinsteinDB/Causets"
workspace = ".."


[target]
name = "causets"
path = "../causets/causet_partitioner.rs"
kind = "binary"
[einstein_ml.causets]
causets_path = "causets"
causets_version = "0.1.0"


[dependencies]
failure= "0.1.82"

[dependencies.failure]
version = "0.1.82"

[dev-dependencies]
failure= "0.1.82"
itertools = "0.10.3"