[package]
name = "edn"
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/YosiSF/EinsteinDB/edn"
description = "EML parser for Project einsteindb"

[dependencies]
chrono = "0.4"
itertools = "0.10.3"
num = "0.4.0"
ordered-float = "2.10.0"
pretty = "0.11.2"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[dev-dependencies]
serde_test = "1.0"
serde_json = "1.0"

[features]
serde_support = ["serde", "serde_derive"]

[build-dependencies]
peg = "0.8.0"
