[package]
name = "einstein_db"
version = "0.1.0"
edition = "2021"
authors = ["Qiang Yu", "einstein_db Authors"]

[workspace]
members = ["../einstein_db_ctl", "../einsteindb-server", "../berolinasql/codec", "../einstein_db_alexandrov_processing", "../def", "../fdb_traits", "../berolinasql/codec"]


# See more soliton_ids and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
failure = "0.1.1"
lazy_static = "1.4.0"
time = "0.3.7"
log = "0.4"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
anyhow = "1.0"
async-stream = "0.3.3"
async-trait = "0.1"
backtrace = "0.3"
byteorder = "1.2"
crc32fast = "1.2"
crc64fast = "1.0.0"
crossbeam = "0.8"
fail = "0.5"
futures = { version = "0.3", features = ["thread-pool", "compat"] }
futures-executor = "0.3.1"
futures-timer = "3.0"
futures-util = { version = "0.3.1", default-features = false, features = ["io", "async-await"] }
hyper-tls = "0.5"
itertools = "0.10"
openssl = "0.10"
hyper = { version = "0.14", features = ["full"] }
http = "0"
libc = "0.2"
libloading = "0.7"
mime = "0.3.13"
more-asserts = "0.2"
murmur3 = "0.5.1"
pin-project = "1.0"
pnet_datalink = "0.29.0"
protobuf = { version = "2.8", features = ["bytes"] }
rand = "0.8.5"
regex = "1.3"
num-traits = "0.2.14"
rev_lines = "0.2.1"
semver = "1.0.6"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_ignored = "0.1"
serde_json = "1.0"
slog = "2.7.0"
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
strum = { version = "0.24.0", features = ["derive"] }
parking_lot = "0.12"
prometheus = { version = "0.13", features = ["nightly"] }
prometheus-static-metric = "0.5"
sysinfo = "0.23.5"
tempfile = "3.0"
paste = "1.0"
thiserror = "1.0"
tokio = { version = "1.17", features = ["full"] }
tokio-openssl = "0.6.3"
toml = "0.5"
url = "2.2.2"
#default-members = ["einstein_db/einsteindb-server", "einstein_db/einsteindb-ctl"]
default = "0.1.2"
#einstein_db = "0.1.0"
#einstein_db_server = "0.0.1"
#einstein_db_ctl = "0.0.1"
#einstein_db_client = "0.1.0"
#einstein_db_client_http = "0.1.0"
#einstein_db_client_grpc = "0.1.0"
#einstein_db_client_grpc_http = "0.1.0"
#einstein_db_client_grpc_tls = "0.1.0"

#default-members = ["einstein_db/einsteindb-server", "einstein_db/einsteindb-ctl"]   # default-members = ["einstein_db/einsteindb-server", "einstein_db/einsteindb-ctl"]
