[package]
name = "einstein_db"

version = "0.1.0"
edition = "2021"
license = "MIT"


[lib]
name = "einstein_db"
path = "./src/lib.rs"
version = "0.1.0"

[bin]
name = "einstein_db"
path = "../einstein_db/src/einsteindb.rs"


# See more soliton_ids and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sodiumoxide = "0.2.18"
foundationdb = "0.1.0"
grpcio = "0.10.3"
grpcio-sys = "0.10.3"
grpcio-health="0.10.3"
chrono = "0.4.19"
failure = "0.1.8"
lazy_static = "1.4.0"
time = "0.3.11"
log = "0.4.17"
serde = "1.0.138"
serde_json = "1.0.138"
anyhow = "1.0.58"
async-stream = "0.3.3"
async-trait = "0.1.56"
backtrace = "0.3.65"
byteorder = "1.4.3"
crc32fast = "1.3.2"
crc64fast = "1.0.0"
crossbeam = "0.8.1"
fail = "0.5.0"
fmt = "0.1.37"
futures-executor = "0.3.1"
futures-timer = "3.0"
futures-util = { version = "0.3.21", default-features = false, features = ["io", "async-await"] }
hyper-tls = "0.5"
itertools = "0.10"
openssl = "0.10"
hyper = { version = "0.14", features = ["full"] }
http = "0"
libc = "0.2"
hex = "0.4"
libloading = "0.7"
mime = "0.3.13"
more-asserts = "0.3.0"
murmur3 = "0.5.1"
pin-project = "1.0"
pnet_datalink = "0.31.0"
protobuf = { version = "3.1.0", features = ["bytes"] }
rand = "0.8.5"
regex = "1.3"
num-traits = "0.2.14"
rev_lines = "0.2.1"
semver = "1.0.6"
serde_derive = "1.0"
serde_ignored = "0.1"
serde_json = "1.0"
slog = "2.7.0"
strum = { version = "0.24.0", features = ["derive"] }
parking_lot = "0.12"
prometheus = { version = "0.13", features = ["nightly"] }
prometheus-static-metric = "0.5"
sysinfo = "0.24.5"
tempfile = "3.0"
paste = "1.0"
thiserror = "1.0"
tokio = { version = "1.17", features = ["full"] }
tokio-openssl = "0.6.3"
toml = "0.5"
tokio-tls = "0.3.1"
url = "2.2.2"
uuid = "0.9.0"
uuid-sys = "0.9.0"


[features]
default = ["sodiumoxide", "foundationdb", "grpcio", "grpcio-sys", "grpcio-health", "chrono", "failure", "lazy_static", "time", "log", "serde", "serde_json", "anyhow", "async-stream", "async-trait", "backtrace", "byteorder", "crc32fast", "crc64fast", "crossbeam", "fail", "fmt", "futures-executor", "futures-timer", "futures-util", "itertools", "openssl", "hyper", "http", "libc", "hex", "libloading", "mime", "more-asserts", "murmur3", "pin-project", "pnet_datalink", "protobuf", "rand", "regex", "num-traits", "rev_lines", "semver", "serde_derive", "serde_ignored", "serde_json", "slog", "strum", "parking_lot", "prometheus", "prometheus-static-metric", "sysinfo", "tempfile", "paste", "thiserror", "tokio", "tokio-openssl", "toml", "tokio-tls", "url", "uuid", "uuid-sys"]


[target.'$TARGET'.dependencies]
sodiumoxide = "0.2.18"
foundationdb = "0.1.0"
grpcio = "0.10.3"
grpcio-sys = "0.10.3"
grpcio-health="0.10.3"
chrono = "0.4.19"
failure = "0.1.8"
lazy_static = "1.4.0"
time = "0.3.11"
log = "0.4.17"
serde = "1.0.138"
serde_json = "1.0.138"
anyhow = "1.0.58"
async-stream = "0.3.3"
async-trait = "0.1.56"
backtrace = "0.3.65"
byteorder = "1.4.3"
crc32fast = "1.3.2"
crc64fast = "1.0.0"
crossbeam = "0.8.1"
fail = "0.5.0"
fmt = "0.1.37"
futures-executor = "0.3.1"
futures-timer = "3.0"
futures-util = { version = "0.3.21", default-features = false, features = ["io", "async-await"] }
hyper-tls = "0.5"
itertools = "0.10"
openssl = "0.10"
hyper = { version = "0.14", features = ["full"] }
http = "0"
libc = "0.2"
hex = "0.4"
libloading = "0.7"
mime = "0.3.13"
more-asserts = "0.3.0"
murmur3 = "0.5.1"
pin-project = "1.0"
pnet_datalink = "0.31.0"
protobuf = { version = "3.1.0",features = ["bytes"]  }
rand = "0.8.5"
regex = "1.3"
causetq = { path = "../causetq" }
causets = { path = "../causets" }
soliton_panic = { path = "../soliton_panic" }
einstein_ml = { path = "../einstein_ml" }
num-traits = "0.2.14"
rev_lines = "0.2.1"
semver = "1.0.6"
serde_derive = "1.0"
serde_ignored = "0.1"
serde_json = "1.0"
slog = "2.7.0"
strum = { version = "0.24.0", features = ["derive"] }
parking_lot = "0.12"
prometheus = { version = "0.13", features = ["nightly"] }
prometheus-static-metric = "0.5"
sysinfo = "0.24.5"
tempfile = "3.0"
paste = "1.0"
thiserror = "1.0"

[lib]
name = "causetq"
path = "../causetq/src/lib.rs"
features = ["default"]





[target.'$TARGET'.dependencies]
causetq = { path = "../causetq" }
causets = { path = "../causets" }
soliton_panic = { path = "../soliton_panic" }
einstein_ml = { path = "../einstein_ml" }




[profile.release]
optimization = "speed"
lto = "on"
debug = "false"
doc = "false"


[profile.debug]
optimization = "speed"
lto = "off"
debug = "true"
doc = "false"


[profile.doc]
optimization = "speed"
lto = "off"
debug = "false"
doc = "true"


[profile.test]
optimization = "speed"
lto = "off"
debug = "false"
doc = "false"


[profile.bench]
optimization = "speed"
lto = "off"
debug = "false"
doc = "false"


[profile.bench-test]
optimization = "speed"
lto = "off"
debug = "false"
doc = "false"



