[package]
name = "einstein_db"
version = "0.1.0"
description = "Einstein DB"
license = "MIT"
author = "EinsteinDB"
keywords = ["einstein", "db", "sql", "mysql", "mariadb", "postgresql", "sqlite", "oracle", "sqlserver"]


[dependencies]
serde = "1.0.1138"
slog = "1.0.1138"
sodiumoxide = "0.2.18"
foundationdb = "0.1.0"
grpcio = "0.10.3"
chrono = "0.4.19"
failure = "0.1.8"
lazy_static = "1.4.0"
time = "0.3.11"
log = "0.4.17"
anyhow = "1.0.58"
async-stream = "0.3.3"
async-trait = "0.1.56"
backtrace = "0.3.65"
byteorder = "1.4.3"
crc32fast = "1.3.2"
crc64fast = "1.0.0"
crossbeam = "0.8.1"
fail = "0.5.0"
fmt = "0.1.37"
futures-executor = "0.3.1"
futures-timer = "3.0"
hyper-tls = "0.5"
itertools = "0.10"
openssl = "0.10"
http = "0"
libc = "0.2"
hex = "0.4"
libloading = "0.7"
pin-project = "1.0"
pnet_datalink = "0.31.0"
rand = "0.8.5"
regex = "1.3"
num-traits = "0.2.14"
rev_lines = "0.2.1"
semver = "1.0.6"
serde_json = "1.0"
slog = "2.7.0"
parking_lot = "0.12"
sysinfo = "0.24.5"
tempfile = "3.0"
paste = "1.0"
thiserror = "1.0"
toml = "0.5"
tokio-tls = "0.3.1"
uuid-sys = "0.9.0"
sodiumoxide = "0.2.18"
time = "0.3.11"
log = "0.4.17"
anyhow = "1.0.58"
backtrace = "0.3.65"
byteorder = "1.4.3"
fmt = "0.1.37"
futures-executor = "0.3.1"
futures-timer = "3.0"
libc = "0.2"
rev_lines = "0.2.1"
