[package]
name = "einstein_db_alexandrov_processing"
version = "0.1.0"
authors = ["EinsteinDB Authors"]
edition = "2021"
license = "MIT Licensed"
description = "EinsteinDB processing package"
tags = ["einstein", "db", "alexandrov", "processv", "processing"]


[dependencies]

[dependencies.einstein_db_alexandrov_processv_processing]






[build]
rustflags = ["-L /usr/local/lib"]
rustc-link-arg = ["-L /usr/local/lib"]
rustc-link-lib = ["einstein_db_alexandrov_processv_processing"]