[package]
name = "einstein_db_alexandrov_processing"
version = "0.1.0"
authors = ["EinsteinDB Authors"]
edition = "2021"
license = "MIT Licensed"
description = "EinsteinDB processing package"
tags = ["einstein", "db", "alexandrov", "processv", "processing"]


[dependencies]
serde = "*"
serde_json = "*"
serde_yaml = "*"
serde_toml = "*"


[[build]]
rustflags = ["-C", "link-arg=-lstdc++"]
rustc = ["rustc"]
rustc_args = ["--crate-type=lib", "--crate-name=einstein_db_alexandrov_processing"]
output = ["lib/einstein_db_alexandrov_processing.rlib"]

[[bin]]
name = "einstein_db_alexandrov_processing"
path = "./alexandrov.rs"


