[package]
name = "einstein_db_ctl"
version = "0.1.0"
license = "MIT, Apache-2.0, BSD-3.0"
authors = ["Whtcorps Inc, The EinsteinDB Authors, EinstAI Inc, and OpenAI Inc"]
edition = "2021"



[dependencies]

gag = "1.0"
hex = "0.4"
causet = { path = "../causet" }
causets = { path = "../causets" }
berolinasql = { path = "../berolinasql" }
chrono = "0.4"
crossbeam = "0.8"
tempfile = "3.0"
serde = "1.0.138"
structopt = "0.3"
futures = "0.3"
tokio = { version = "1.5", features = ["rt-multi-thread", "time"] }
libc = "0.2"
nix = "0.24.1"
rand = "0.8.5"
regex = "1"
serde_json = "1.0"
toml = "0.5"

[dependencies.causetq]
path = "../causetq"


[features]
rt-multi-thread = "1"
time = "1"


[target.'.exe'.linker.libraries]
gag = { kind = "static" }
hex = { kind = "static" }
causetq = { kind = "static" }
causet = { kind = "static" }
causets = { kind = "static" }
berolinasql = { kind = "static" }
chrono = { kind = "static" }
crossbeam = { kind = "static" }
tempfile = { kind = "static" }
serde = { kind = "static" }
structopt = { kind = "static" }
futures = { kind = "static" }
tokio = { kind = "static" }
libc = { kind = "static" }
nix = { kind = "static" }


[target.'.exe'.linker.libraries.dynamic]
rand = { kind = "dynamic" }
regex = { kind = "dynamic" }
serde_json = { kind = "dynamic" }
toml = { kind = "dynamic" }


[target.'.exe'.linker.libraries.dynamic.rand]
version = "0.8.5"


[target.'.exe'.linker.libraries.dynamic.regex]
version = "1"


[target.'.exe'.linker.libraries.dynamic.serde_json]
version = "1.0"


#debian
[target.'.exe'.linker.libraries.dynamic.toml]
version = "0.5"


[target.'.exe'.linker.libraries.dynamic.tokio]
version = "1.5"

