[package]
name = "einstein_ml"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/YosiSF/EinsteinDB/einstein_ml"
description = "AllegroCL wrapper for EinsteinDB Metalanguage (Einstein_ML)"



[dependencies]
einstein_db = { path = "../einstein_db" }
causetq = { path = "../causetq" }
allegro_poset = { path = "../allegro_poset" }
causet = { path = "../causet" }
chrono = "0.4.19"
itertools = "0.10.3"
num = "0.4.0"
ordered-float = "2.10.0"
pretty = { version = "0.11.2" }
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
serde_yaml = "0.8.23"
serde_cbor = "0.11.2"
serde_urlencoded = "0.7.1"
serde_bytes = "0.11.5"
uuid = { version = "0.8.2", features = ["v4", "serde"] }

[dependencies.cauusets]
path = "../causets"


[features]
default = ["einstein_ml"]
einstein_ml = []


[workspace]
members = ["einstein_ml"]


[target.einstein_ml]
edition = "2021"


[profile.release]
opt-level = "3"
debug = false
rpath = false
lto = false
codegen-units = "1"
debug-assertions = false
overflow-checks = true
panic = "abort"
incremental = false
embed-bitcode = false

[profile.debug]
opt-level = "0"
debug = true
rpath = false
lto = false
codegen-units = "1"
debug-assertions = true
overflow-checks = true
panic = "abort"
incremental = false
embed-bitcode = false

[profile.release-lto]
opt-level = "3"
debug = false
rpath = false
lto = true
codegen-units = "1"
debug-assertions = false
overflow-checks = true
panic = "abort"
incremental = false
embed-bitcode = false


[profile.debug-lto]
opt-level = "0"
debug = true
rpath = false
lto = true
codegen-units = "1"
debug-assertions = true
overflow-checks = true

panic = "abort"
incremental = false
embed-bitcode = false

[profile.release-lto-thin]
opt-level = "3"
debug = false
rpath = false

lto = true
codegen-units = "1"
debug-assertions = false
overflow-checks = true
panic = "abort"
incremental = false

embed-bitcode = false





