[package]
name = "einsteindb_server"
version = "0.1.0"
edition = "2021"
authors = ["einstein_db"]
description = "einstein_db server"
license = "MIT"
homepage = "https://www.einsteindb.com"
repository = "https://github.com/YosiSF/EinsteinDB"



[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
#fdb
fdb = "0.3.1"
url = "2"
tokio = { version = "1", features = ["rt-multi-thread"] }
base64 = "0.13"
tokio-util = {version = "0.7", features = ["io"]}
bytes = "1"
futures = "0.3.21"
hyper = "0.14.19"