[package]
name = "einsteindb_server"
version = "0.1.0"
edition = "2021"
authors = ["einstein_db"]
description = "einstein_db server"
license = "MIT"
homepage = "https://www.einsteindb.com"
repository = "https://github.com/YosiSF/EinsteinDB"



[dependencies]
einstein_db = { path= "../einstein_db" }
eindtein_ml = { path= "../einstein_ml" }
berolinasql = { path= "../berolinasql" }
causet= { path= "../causet" }
causets = { path= "../causets" }
allegro_poset = { path= "../allegro_poset" }
soliton = { path= "../soliton" }
soliton_panic = { path= "../soliton_panic" }
fdb_traits = { path= "../fdb_traits" }
serde = "1.0.1138"
serde_derive = "1.0.1138"
slog = "1.0.1138"
einstein_db_ctl = { path= "../einstein_db_ctl" }
einstein_db_alexandrov_processing = {path= "../einstein_db_alexandrov_processing"}
serde_json = "1"
fdb = "0.3.1"
url = "2"
tokio = { version = "1", features = ["rt-multi-thread"] }
base64 = "0.13"
tokio-util = {version = "0.7", features = ["io"]}
bytes = "1"
futures = "0.3.21"
hyper = "0.14.19"