[package]
name = "einstai_einsteindb"
version = "0.0.1"
workspace = ".."

[features]
default = []
sqlcipher = ["rusqlite/sqlcipher"]
syncable = ["serde", "serde_json", "serde_derive"]

[dependencies]
failure = "0.1.1"
indexmap = "1"
itertools = "0.10.3"
lazy_static = "0.2"
log = "0.4.14"
ordered-float = "0.5"
time = "0.3.6"
petgraph = "0.4.12"
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[dependencies.rusqlite]
version = "0.26.3"
features = ["limits"]

[dependencies.einsteinml]
path = "../einsteinml"

[dependencies.einsteindb_core]
path = "../core"

[dependencies.core_traits]
path = "../core-traits"

[dependencies.einsteindb_traits]
path = "../einsteindb-traits"

[dependencies.einstai_sql]
path = "../sql"

# Should be dev-dependencies.
[dependencies.tabwriter]
version = "1.0.3"

[dev-dependencies]
env_logger = "0.5"
