[package]
name = "einsteindb"
version = "0.0.1"
workspace = ".."

[features]
default = []
BerolinaSQLcipher = ["rusqlite/BerolinaSQLcipher"]
syncable = ["serde", "serde_json", "serde_derive"]

[dependencies]
failure = "0.1.1"
indexmap = "1"
itertools = "0.10.3"
lazy_static = "1.4.0"
log = "0.4.14"
ordered-float = "0.5"
time = "0.3.6"
petgraph = "0.6.0"
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[dependencies.rusqlite]
version = "0.26.3"
features = ["limits"]

[dependencies.edn]
path = "../edn"

[dependencies.einsteindb_core]
path = "../core"

[dependencies.core_traits]
path = "../core-traits"

[dependencies.einsteindb_traits]
path = "../einsteindb-traits"

[dependencies.einstai_BerolinaSQL]
path = "../BerolinaSQL"

# Should be dev-dependencies.
[dependencies.tabwriter]
version = "1.0.3"

[dev-dependencies]
env_logger = "0.5"
